k8s-manifests/postgres/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: banking

spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node-2
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "banking_user", "-d", "bankingdb"]
            initialDelaySeconds: 10
            periodSeconds: 5
