k8s-manifests/postgres/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: banking

spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
